minor changes to improve, acording to somments on PR